# SMALL_SFEMaNS

./: .gitignore  CMakeLists.txt
FEMSUB/: ERK_Butcher_tableau.f90  IRK_Butcher_tableau.f90  chaine_caractere.f90  sorting.f90  st_sparsekit.f90  sub_plot.f90  tools.f90  user_time.f90
FEMSUB_OBJET/: #solver_pardiso.f90#  def_type_mesh.f90  fem_s_direct.f90  fem_sparsekit.f90  fem_tn.f90  post_interp.f90  prep_mesh.f90  prep_mesh_1d.f90  prep_mesh_periodic.f90  solver_pardiso.f90  transpose.f90
FEMSUB_OBJET_ALL/: fem_sparsekit.f90  post_interp.f90  post_proc.f90  prep_mesh.f90  prep_mesh_1d.f90  prep_mesh_periodic.f90  solver_pardiso.f90  transpose.f90
FEMSUB_OBJET_ALL/APRIL_2009/: solver_pardiso_old.F90
GAUSS_POINTS_OBJET/: GP_2D_p3.f90  basis_change.f  gauss_points_1d.f90  gauss_points_1d_p1.f90  gauss_points_1d_p2.f90  gauss_points_1d_p3.f90  gauss_points_2d.f90  gauss_points_2d_p3.f90
OLD_GAUSS_POINTS_OBJET/OLD/: GP_2D_p1.F90  GP_2D_p2.F90  GP_2D_p3.F90  gauss_points_2d.F90  gauss_points_2d_p1.f90  gauss_points_2d_p1_april_2009.f90  gauss_points_2d_p1_dec_2018.f90  gauss_points_2d_p2.f90  gauss_points_2d_p2_nov_2018.f90
